# VisOS

./: .gitignore  .pids.json  DOCS.md  app.py  package.json  pyproject.toml  readme.md  run.py  start.bat  start.sh
app/: layout.tsx  page.tsx
app/[view]/: page.tsx
backend/: __init__.py  annotation_tools.py  dataset_merger.py  dataset_parsers.py  format_converter.py  main.py  model_integration.py  training.py  video_utils.py
components/: annotation-view.tsx  augmentation-view.tsx  class-management-view.tsx  dashboard-view.tsx  datasets-view.tsx  duplicate-detection-view.tsx  merge-view.tsx  models-view.tsx  settings-view.tsx  sidebar.tsx  split-view.tsx  training-view.tsx  video-extraction-view.tsx  yaml-wizard-view.tsx
components/ui/: opensamannotator-logo.tsx
lib/: types.ts
scripts/: run_backend.bat  run_backend.sh
