[project]
name = "opensamannotator"
version = "0.1.0"
description = "Locally-run image annotation tool with SAM 3 / SAM 3.1 support"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0.0",
    "Pillow>=10.0.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0,<2.0",
    "PyYAML>=6.0",
    "pandas>=2.0.0",
    "psutil>=5.9.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "aiofiles>=23.0.0",
    "huggingface_hub>=0.24.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "sam3 @ git+https://github.com/facebookresearch/sam3.git",
]

[tool.uv]
# Keep compiled torch wheels out of the lockfile's pinned universe so
# GPU-equipped machines can install the CUDA wheel index at runtime.
override-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
